2010-05-12  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSDocumentController.m (-init, -maximumRecentDocumentCount,
	-noteNewRecentDocumentURL:): Make number of remembered recent
	documents configurable with a user preference and fix a bug where
	one extra document was remembered.

2010-05-12  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/GSXibLoader.m (-awakeData:withContext:): Fix bug where
	some objects from the xib file were not sent an -awakeFromNib
	message.

2010-05-12  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Headers/AppKit/NSMenu.h:
	* Source/NSMenu.m (-_initWithCoder:, -dealloc, -_name,
	-_setName:, -awakeFromNib): Add a private name attribute to menus
	to identify special purpose menus. Fixes a bug where the services,
	windows, and recent documents menu were defunct when loading the
	menu from a .nib file.

2010-05-12  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Headers/AppKit/NSDocumentController.h:
	* Source/NSDocumentFrameworkPrivate.h:
	* Source/NSDocumentController.m (-_recentDocumentsMenu,
	-_setRecentDocumentsMenu:, -_updateRecentDocumentsMenu):
	Add an attribute to NSDocumentController to maintain the recent
	documents menu. Make the methods to access that menu available to
	other classes in -gui.

2010-05-12  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/GSNibLoading.m	(-nibInstantiateWithOwner:topLevelObjects:):
	Fix bug where some objects from the nib file were not sent an
	-awakeFromNib message.

2010-05-11 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Additions/GNUstepGUI/GSTheme.h:
	* Source/GSThemeDrawing.m: Remove compiler warning for NSBrowser
	header cell drawing.

2010-05-10  Adam Fedor  <fedor@gnu.org>

	* Clarify unstable release documentation

2010-05-09  Adam Fedor  <fedor@gnu.org>

	* Version 0.19.0 Unstable Release

2010-05-09  Adam Fedor  <fedor@gnu.org>

	* Version 0.18.0

2010-05-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTheme.m: ([-deactivate]) unload current theme images before